# readable

./: .bumpversion.cfg  .editorconfig  .env.sample  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  docker-stack.yml  manage.py  mypy.ini  pyproject.toml
deployment/: docker-publishing
deployment/nginx/: Dockerfile  docker-entrypoint  mime.types  nginx.conf
deployment/readable/: docker-entrypoint  uwsgi.xml
readable/: __init__.py  __main__.py  admin.py  apps.py  crontab.py  forms.py  models.py  tasks.py  types.py  urls.py  wsgi.py
readable/api/: urls.py  validators.py
readable/api/serializers/: __init__.py  documents.py  users.py
readable/api/views/: __init__.py  documents.py  users.py
readable/management/commands/: uwsgi_monitoring.py
readable/migrations/: 0001_initial.py
readable/public_api/: __init__.py  apps.py  urls.py
readable/public_api/serializers/: __init__.py  documents.py  users.py
readable/public_api/utils/: __init__.py  validators.py
readable/public_api/views/: __init__.py  documents.py  empty.py  users.py
readable/resources/assets/: bundle.min.js  minimal.min.css  readable.js
readable/resources/assets/bootstrap/: bootstrap.css
readable/resources/assets/fontawesome/: brands.js  fontawesome.js  solid.js
readable/resources/openapi/: openapi.json
readable/resources/swagger/: schema.json
readable/resources/translations/ru/LC_MESSAGES/: django.mo  django.po
readable/settings/: common.py  development.py  production.py  staging.py
readable/templates/: common.html  documents_detail.html  exceptions_bad_request.html  exceptions_common.html  exceptions_page_not_found.html  exceptions_permission_denied.html  exceptions_server_error.html  footer.html  header.html  index.html  login.html  messages.html  profile.html  registration.html  robots.txt  scripts.html  sitemap.xml
readable/templates/seo/: robots.txt  sitemap.xml
readable/templatetags/: __init__.py  meta_tags.py  string.py
readable/utils/: __init__.py  collections.py  comparable.py  decorators.py  executors.py  hashers.py  read_documents.py  signals.py  temporary.py  validators.py
readable/utils/plain_language/: documents.py  metrics.py  processing.py
readable/utils/plain_language/indexes/: __init__.py  english.py  russian.py
readable/views/: __init__.py  authorization.py  documents_detail.py  exceptions.py  index.py  profile.py  robots.py  seo.py  sitemap.py
requirements/: development.txt  production.txt
scripts/: docker-entrypoint  docker-healthcheck  docker-publishing  uwsgi.xml
tests/: __init__.py  common.py  test_admin.py  test_collections.py  test_comparable.py  test_decorators.py  test_executors.py  test_forms.py  test_models.py  test_password_hashers.py  test_plain_language.py  test_read_documents.py  test_serializers.py  test_signals.py  test_templatetags.py  test_utils.py  test_validators.py  test_views.py  utils.py
