[tool.poetry]
name        = "readable"
version     = "0.4.3"
authors     = ["Andrew Malchuk <andrew.malchuk@yandex.ru>"]
description = "Check and improve the spelling and grammar of documents"
keywords    = ["readability", "text statistics", "spelling", "grammar", "overall score"]
homepage    = "https://readable.pw"
repository  = "https://gitlab.com/amalchuk/readable"
readme      = "README.md"
license     = "MIT"
include     = ["manage.py"]

[tool.poetry.dependencies]
python              = "3.9.1"
diskcache           = "5.2.1"
django              = "3.1.5"
djangorestframework = "3.12.2"
pymupdf             = "1.18.6"
python-docx         = "0.8.10"
scienco             = "0.4.1"
simplethread        = "0.4.1"
psycopg2            = { version = ">=2.8", optional = true }
uwsgi               = { version = ">=2.0", optional = true }

[tool.poetry.extras]
deployment = ["psycopg2", "uwsgi"]

[tool.poetry.dev-dependencies]
docker-compose = "^1.28"
isort          = "^5.7"
reportlab      = "^3.5"
coverage       = { version = "^5.3", extras = ["toml"]}
mypy           = { version = "*", allow-prereleases = true }

[tool.coverage.run]
branch = true
omit   = [
    "readable/migrations/0001_initial.py",
    "readable/settings/common.py",
    "readable/settings/development.py",
    "readable/settings/production.py",
    "readable/settings/staging.py",
    "readable/wsgi.py"
]
source = ["readable"]

[tool.coverage.report]
precision    = 2
skip_covered = true
skip_empty   = true

[tool.coverage.html]
directory = "public"
title     = "Code Coverage"

[tool.isort]
force_single_line          = true
force_sort_within_sections = true
known_first_party          = ["readable"]
known_local_folder         = ["tests"]
lexicographical            = true
line_length                = 125
single_line_exclusions     = ["typing"]
