[tool.poetry]
name        = "readable"
version     = "0.5.3"
authors     = ["Andrew Malchuk <andrew.malchuk@yandex.ru>"]
description = "Check and improve the spelling and grammar of documents"
keywords    = ["readability", "text statistics", "spelling", "grammar", "overall score"]
homepage    = "https://readable.pw"
repository  = "https://gitlab.com/amalchuk/readable"
readme      = "README.md"
license     = "MIT"
include     = ["manage.py"]

[tool.poetry.dependencies]
python              = "3.9.1"
django              = "3.1.7"  # https://pypi.org/project/django
djangorestframework = "3.12.2" # https://pypi.org/project/djangorestframework
pymupdf             = "1.18.8" # https://pypi.org/project/pymupdf
python-docx         = "0.8.10" # https://pypi.org/project/python-docx
scienco             = "0.4.1"  # https://pypi.org/project/scienco
simplethread        = "0.4.1"  # https://pypi.org/project/simplethread
psycopg2            = { version = "~2.8", optional = true } # https://pypi.org/project/psycopg2
uwsgi               = { version = "~2.0", optional = true } # https://pypi.org/project/uwsgi

[tool.poetry.extras]
deployment = ["psycopg2", "uwsgi"]

[tool.poetry.dev-dependencies]
docker-compose = "~1.28" # https://pypi.org/project/docker-compose
isort          = "~5.7"  # https://pypi.org/project/isort
reportlab      = "~3.5"  # https://pypi.org/project/reportlab
coverage       = { version = "~5.4", extras = ["toml"]}      # https://pypi.org/project/coverage
mypy           = { version = "*", allow-prereleases = true } # https://pypi.org/project/mypy

[tool.coverage.run]
branch = true
omit   = [
    "readable/migrations/0001_initial.py",
    "readable/settings/common.py",
    "readable/settings/development.py",
    "readable/settings/production.py",
    "readable/settings/staging.py",
    "readable/wsgi.py"
]
source = ["readable"]

[tool.coverage.report]
precision    = 2
skip_covered = true
skip_empty   = true

[tool.coverage.html]
directory = "public"
title     = "Code Coverage"

[tool.isort]
force_single_line          = true
force_sort_within_sections = true
known_first_party          = ["readable"]
known_local_folder         = ["tests"]
lexicographical            = true
line_length                = 125
single_line_exclusions     = ["typing"]
